# flask-crud

./: .gitignore  Makefile  README.md  auxilio.txt  development_config.py  main.py  pyproject.toml  pytest.ini  test_config.py
instance/: db.sqlite  test.db
migrations/versions/: 2e5f2ec84d8b_.py  6cde89d784c5_.py  8dda51779b47_.py  f5a063e95090_.py
project/: __init__.py  documentation_urls.py  models.py  urls.py
project/static/css/: style.css
project/templates/: atualizar-usuario.html  cadastrar-usuario.html  documentation.html  index.html  listar-usuarios.html  perfil-usuario.html
tests/: conftest.py  tests_models.py  tests_urls.py  tests_views.py
