[tool.poetry]
name = "flask-crud-local"
version = "0.1.0"
description = ""
authors = ["Igor Marques <engenheirostrauss2@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_crud_local"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
flask-migrate = "^4.0.4"
pytz = "^2023.3"
black = "^23.3.0"
flask-pytest = "^0.0.5"
pytest-cov = "^4.1.0"
pytest = "^7.4.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
